source/objects/Event_Log__e/Event_Log__e.object-meta.xml
<CustomObject>
    <label>Event Log</label>
    <pluralLabel>Event Logs</pluralLabel>
</CustomObject>