source/objects/Event_Log__e/fields/API_Parameters__c.field-meta.xml
<CustomField>
    <fullName>API_Parameters__c</fullName>
    <label>API Parameters</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>