source/objects/Event_Log__e/fields/Governor_Limits__c.field-meta.xml
<CustomField>
    <fullName>Governor_Limits__c</fullName>
    <label>Governor Limits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>