source/objects/Event_Log__e/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>