source/objects/Event_Log__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>